exports[`test can specify a maximum opacity 1`] = `
<div
  style={
    Object {
      "opacity": 0.9,
      "transition": "opacity 600ms linear 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can specify a minimum opacity 1`] = `
<div
  style={
    Object {
      "opacity": 0.1,
      "transition": "opacity 600ms linear 0ms",
    }
  }>
  Children
</div>
`;

exports[`test has opacity 0 when inactive 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transition": "opacity 600ms linear 0ms",
    }
  }>
  Children
</div>
`;

exports[`test has opacity 1 when active 1`] = `
<div
  style={
    Object {
      "opacity": 1,
      "transition": "opacity 600ms linear 0ms",
    }
  }>
  Children
</div>
`;
